test/tests/compiler/5_local_variables/invalid_parse/plx1_missing_line_break_1.plx
pub fn main(none) i32 {
    a: i32;
    a = 1 + 2 return a
}
